--- a/css/style.css
+++ b/css/style.css
@@ -792,6 +792,11 @@ body.dark .swiper-pagination-default .swiper-pagination-bullet-active {
     outline: 1px solid white;
 }
 
+.material-symbols-outlined {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
 
 .item-portfolio__background {
     margin-top: 25px;
@@ -2362,6 +2367,7 @@ body.dark .pop_up {
 
 .pop_up div h3 {
     margin-bottom: 30px;
+    margin-top: 30px;
     font-size: 30px;
 }
 
